Fixed some minor errors Added new methods to retrieve special types or get auth username or server instance Add license

--- a/package.json
+++ b/package.json
@@ -8,35 +8,50 @@
     "test": "jest --coverage --runInBand"
   },
   "keywords": [
+    "aura-helper-framework",
+    "aura helper framework",
+    "Aura Helper Framework",
+    "ah-framework",
+    "AH Framework",
+    "Aura Helper",
+    "aura-helper",
+    "AuraHelper Library",
+    "AuraHelper Libraries",
+    "AH",
+    "ah",
+    "Salesforce",
+    "Salesforce Metadata",
+    "Salesforce Apps",
+    "Salesforce XML",
+    "Salesforce Tools",
+    "Apex",
+    "force.com",
+    "DevOps",
+		"devops",
     "Metadata Connector",
     "Salesforce Connector",
-    "Metadata",
-    "Connector",
-    "Package Generator",
-    "GIT",
-    "Factory",
     "Describe Metadata",
     "List Metadata",
     "Deploy Metadata",
     "Retrieve Metadata",
-    "Package Generator",
-    "Describe SObjects",
-    "Auth Org",
-    "Salesforce",
-    "Force.com",
-    "Aura",
-    "Aura Helper",
-    "AuraHelper",
-    "aura-helper",
-    "aura-helper-cli",
-    "Aura Helper CLI",
-    "Aura Helper VSCode",
-    "Aura Helper Extension"
+    "Describe SObjects"
   ],
   "author": "Juan José Longoria López (Kanko) <juanjoselongoria@gmail.com>",
-  "license": "MIT",
+  "license": "GPLv3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JJLongoria/aura-helper-connector"
+  },
+  "bugs": {
+		"url": "https://github.com/JJLongoria/aura-helper-connector/issues",
+		"email": "juanjoselongoria@gmail.com"
+	},
   "dependencies": {
-    "@ah/core": "file:../ah-core"
+    "@ah/core": "file:../ah-core",
+    "@ah/package-generator": "file:../ah-package-generator",
+    "@ah/languages": "file:../ah-languages",
+    "@ah/metadata-factory": "file:../ah-metadata-factory",
+    "@ah/xml-compressor": "file:../ah-xml-compressor"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
