--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ah/connector",
+  "name": "@aurahelper/connector",
   "productName": "Aura Helper SalesForce Metadata Connector",
   "version": "1.0.0",
   "description": "Powerfull Libraries to connect with Salesforce to list, describe, deploy or retrieve metadata types. Also can describe SObjects, Create Projects, Authorize Orgs, Execute Queries, Export or Import Data... To the correct work of this library, you need to have SFDX CLI installed in your system.",
@@ -47,11 +47,11 @@
 		"email": "juanjoselongoria@gmail.com"
 	},
   "dependencies": {
-    "@ah/core": "file:../ah-core",
-    "@ah/package-generator": "file:../ah-package-generator",
-    "@ah/languages": "file:../ah-languages",
-    "@ah/metadata-factory": "file:../ah-metadata-factory",
-    "@ah/xml-compressor": "file:../ah-xml-compressor"
+    "@aurahelper/core": "^1.0.0",
+    "@aurahelper/package-generator": "^1.0.0",
+    "@aurahelper/languages": "^1.0.0",
+    "@aurahelper/metadata-factory": "^1.0.0",
+    "@aurahelper/xml-compressor": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
