Optimized all methods, specially, long running methods like describe metadata or sobjects

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@aurahelper/connector",
   "productName": "Aura Helper SalesForce Metadata Connector",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "description": "Powerfull Libraries to connect with Salesforce to list, describe, deploy or retrieve metadata types. Also can describe SObjects, Create Projects, Authorize Orgs, Execute Queries, Export or Import Data... To the correct work of this library, you need to have SFDX CLI installed in your system.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "compile": "tsc -p ./ ",
-    "prepack": "tsc -p ./",
-    "pretest": "tsc -p ./ ",
+    "build": "tsc -p ./",
+    "prepublish": "npm run build",
+    "pretest": "npm run build",
+    "prepack": "npm run build",
     "lint": "eslint src --ext ts",
     "lint-fix": "eslint src --ext ts --fix",
     "watch": "tsc -watch -p ./",
